<resources>
    <string name="network_base_url">https://api.prizmapp.com</string>
    <string name="network_auth_endpoint">/oauth2/authorize</string>
    <string name="network_token_endpoint">/oauth2/token</string>
    <string name="network_base_url_v2">https://api.prizmapp.com/v2</string>
    <string name="network_preferences_file_key">co.higheraltitude.prizm.networkprefs</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="sender_id">820769524937</string>
    <string name="app_name">Prizm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_logout">Logout</string>
    <string name="action_upload">Upload</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="action_edit_group">Edit Group</string>
    <string name="action_edit_members">Edit Members</string>
    <string name="action_mute">Mute</string>
    <string name="action_unmute">Unmute</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_write_comment">Write a comment</string>
    <string name="action_follow">Follow</string>
    <string name="action_following">Following</string>
    <string name="action_trust">Request Trust</string>
    <string name="action_trusted">Trusted</string>
    <string name="action_my_trust">Trust</string>
    <string name="action_delete_post">Delete Post</string>
    <string name="action_edit_post_text">Edit Post Text</string>

    <string name="label_group_name">Group Name</string>
    <string name="label_group_leader">Group Leader</string>
    <string name="label_group_description">Group Description</string>
    <string name="label_group_member_search">Search by member</string>

    <string name="notify_upload">Upload Started</string>

    <string name="error_invalid_group">Uh oh! You must provide a name and description for your group.</string>

    <string name="registration_individual">Individual</string>
    <string name="registration_partner">Partner</string>

    <string name="cd_facebook">Login with Facebook</string>
    <string name="cd_back">Go back</string>

    <string name="DEBUG_TAG">co.higheraltitude.prizm</string>
    <string name="title_activity_login">Login</string>



    <string name="facebook_app_id">1408826952716972</string>
    <string name="aws_access_key">AKIAI7E5TSPROBCA4YWA</string>
    <string name="aws_secret">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</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main">Prizm</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_message_groups">Message</string>
    <string name="title_activity_direct_picker">\@Direct</string>
    <string name="title_activity_direct_selector">Create Direct Message</string>




    <string name="error_login_error">Oops. It looks like there was a problem logging you in. Please try again.</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_user_signup">UserSignupActivity</string>
    <string name="title_activity_partner_signup">PartnerSignupActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ethnicity_prompt">Ethnicity</string>
    <string name="religion_prompt">Religion</string>
    <string name="type_prompt">Type</string>
    <string name="caption_prompt">Caption your post&#8230;</string>

    <string name="title_activity_read_messages">ReadMessagesActivity</string>

    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <string name="title_comments">Comments</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_group">Create Group</string>
    <string name="title_activity_edit_group">Edit Group</string>
    <string name="title_activity_view_members">Members</string>
    <string name="title_photo_chooser">Upload a photo from:</string>
    <string name="viewers_viewed">Viewed</string>
    <string name="viewers_not_viewed">Not Viewed</string>
    <string name="notifications_activities">Notifications</string>
    <string name="notifications_requests">Requests</string>

    <string name="welcome_title">Welcome to Prizm</string>
    <string name="welcome_paragraph_1">Prizm lets you privately communicate with people in your favorite organizations and discover new opportunities.</string>
    <string name="welcome_paragraph_2">If you have a PROGRAM CODE from your organization, go to "Edit Profile" and enter it in the "Program Code" box.</string>
    <string name="welcome_paragraph_3">If you don\'t have a PROGRAM CODE, please check back soon for more public features.</string>
    <string name="welcome_paragraph_4">If you would like your organization to start using Prizm, get in touch! info@prizmapp.com</string>

    <string name="string_options">Options</string>
    <string name="string_category">Category</string>
    <string name="category_aspiration">Aspiration</string>
    <string name="category_passion">Passion</string>
    <string name="category_achievement">Achievement</string>
    <string name="category_experience">Experience</string>
    <string name="category_inspiration">Inspiration</string>
    <string name="category_private">Private</string>

    <string name="error_scope_private">You must choose a different category before making this post public.</string>
    <string name="error_no_camera">Uh oh&#8230; It looks like we can\'t access your camera.</string>
    <string name="error_flash_unsupported">This camera mode does not support the flash feature.</string>
    <string name="error_camera_mode_unsupported">This phone does not support switching camera modes.</string>
    <string name="error_hdr_mode_unsupported">HDR images are currently unsupported.</string>
    <string name="error_grid_mode_unsupported">Camera grid view is currently unsupported.</string>
    <string name="error_timer_mode_unsupported">Camera timers are currently unsupported.</string>

    <string name="explore_latest">Latest</string>
    <string name="explore_popular">Popular</string>
    <string name="explore_featured">Featured</string>
    <string name="mixpanel_token">831cd11c7aedb1175765d2a9583c5cff</string>
    <string name="activity_insight">Insight</string>

    <string name="visibility_public">Public</string>
    <string name="visibility_trust">Trust</string>
    <string name="visibility_private">Private</string>

    <string name="message_tag">Use # to add a tag and @ to add a person</string>
    <string name="label_rank">Rank</string>
    <string name="label_points">Points</string>
    <string name="label_surveys">Surveys</string>
    <string name="label_leaderboard">Leaderboard</string>
</resources>
