<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.higheraltitude.prizm.fragments.HomeFeedFragment"
    android:orientation="vertical" android:background="@color/prizm_dominant_background">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView android:layout_height="116.7dp"
            android:layout_width="94dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45.7dp"
            android:src="@drawable/prizmlogo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="33.3dp"
            android:gravity="top"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font_size_regular"
            android:textColor="@color/brownish_grey"
            android:text="@string/welcome_title"
            android:layout_marginTop="53.7dp"
            />
        <TextView
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.7dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/brownish_grey"
            android:text="@string/welcome_paragraph_1"
            />
        <TextView
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.7dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/brownish_grey"
            android:text="@string/welcome_paragraph_2"
            />
        <TextView
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.7dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/brownish_grey"
            android:text="@string/welcome_paragraph_3"
            />
        <TextView
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.7dp"
            android:gravity="center"
            android:autoLink="all"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/brownish_grey"
            android:text="@string/welcome_paragraph_4"
            />
    </LinearLayout>
    </ScrollView>

</LinearLayout>
