<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.higheraltitude.prizm.CreatePostActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_nav_bar"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">
        <ImageButton
            android:id="@+id/action_done_button"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_width="44dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textAllCaps="false"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/creategroup_check_icon"
            android:scaleType="center"
            android:layout_marginRight="5.7dp"
            />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:background="@color/pale_grey"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/preview_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="18.4dp"
                    android:layout_marginRight="5.6dp"
                    android:scaleType="centerInside"
                    android:layout_marginTop="20dp"/>
                <EditText
                    android:id="@+id/post_text"
                    android:gravity="top|left"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:paddingTop="52.3dp"
                    android:layout_weight="1"
                    android:background="@color/pale_grey"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="@dimen/font_size_regular"
                    android:textColor="@color/brownish_grey"
                    android:hint="@string/caption_prompt"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="18.3dp"
                android:textSize="@dimen/font_size_regular"
                android:textColor="@color/brownish_grey"
                android:text="@string/string_options"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="54.3dp"
                android:background="@color/pale_grey"
                android:orientation="horizontal">
                <co.higheraltitude.prizm.custom.ToggleImageButton
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/camera_options_icon"
                    android:scaleType="center"
                    android:onClick="photoButtonClicked"
                    />
                <View
                    android:layout_width="0.7dp"
                    android:layout_height="19.3dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/warm_grey_50"
                    />
                <co.higheraltitude.prizm.custom.ToggleImageButton
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/locationpin_options_icon"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    />
                <View
                    android:layout_width="0.7dp"
                    android:layout_height="19.3dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/warm_grey_50"
                    />
                <co.higheraltitude.prizm.custom.ToggleImageButton
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/usertag_options_icon"
                    android:onClick="tagButtonClicked"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    />
                <View
                    android:layout_width="0.7dp"
                    android:layout_height="19.3dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/warm_grey_50"
                    />
                <co.higheraltitude.prizm.custom.ToggleImageButton
                    android:id="@+id/visibility_button"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/visibility_button"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    android:onClick="visibilityButtonClicked"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="18.3dp"
                android:textSize="@dimen/font_size_regular"
                android:textColor="@color/brownish_grey"
                android:text="@string/string_category"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="139.7dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <co.higheraltitude.prizm.custom.ToggleButton
                        android:id="@+id/aspiration_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:textAllCaps="false"
                        android:textColor="@color/brownish_grey"
                        android:textSize="13.3sp"
                        android:gravity="center_horizontal|bottom"
                        android:paddingBottom="4dp"
                        android:text="@string/category_aspiration"
                        android:textStyle="normal"
                        android:onClick="aspirationButtonClicked"
                        android:background="@drawable/btn_aspiration"/>
                    <co.higheraltitude.prizm.custom.ToggleButton
                        android:id="@+id/passion_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/category_passion"
                        android:background="@drawable/btn_passion"
                        android:textAllCaps="false"
                        android:textColor="@color/brownish_grey"
                        android:textSize="13.3sp"
                        android:gravity="center_horizontal|bottom"
                        android:textStyle="normal"
                        android:onClick="passionButtonClicked"
                        android:paddingBottom="4dp"/>
                    <co.higheraltitude.prizm.custom.ToggleButton
                        android:id="@+id/experience_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/category_experience"
                        android:background="@drawable/btn_experience"
                        android:textAllCaps="false"
                        android:textColor="@color/brownish_grey"
                        android:textSize="13.3sp"
                        android:gravity="center_horizontal|bottom"
                        android:textStyle="normal"
                        android:onClick="experienceButtonClicked"
                        android:paddingBottom="4dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <co.higheraltitude.prizm.custom.ToggleButton
                        android:id="@+id/achievement_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/category_achievement"
                        android:background="@drawable/btn_achievement"
                        android:textAllCaps="false"
                        android:textColor="@color/brownish_grey"
                        android:textSize="13.3sp"
                        android:gravity="center_horizontal|bottom"
                        android:textStyle="normal"
                        android:onClick="achievementButtonClicked"
                        android:paddingBottom="4dp"/>
                    <co.higheraltitude.prizm.custom.ToggleButton
                        android:id="@+id/inspiration_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/category_inspiration"
                        android:background="@drawable/btn_inspiration"
                        android:textAllCaps="false"
                        android:textColor="@color/brownish_grey"
                        android:textSize="13.3sp"
                        android:gravity="center_horizontal|bottom"
                        android:textStyle="normal"
                        android:onClick="inspirationButtonClicked"
                        android:paddingBottom="4dp"/>
                    <co.higheraltitude.prizm.custom.ToggleButton
                        android:id="@+id/private_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/category_private"
                        android:background="@drawable/btn_private"
                        android:textAllCaps="false"
                        android:textStyle="normal"
                        android:textColor="@color/brownish_grey"
                        android:textSize="13.3sp"
                        android:gravity="center_horizontal|bottom"
                        android:onClick="privateButtonClicked"
                        android:paddingBottom="4dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="235.7dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/dialog_background"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true">
        <ListView
            android:id="@+id/tag_picker_list"
            android:layout_width="fill_parent"
            android:divider="#00000000"
            android:layout_height="fill_parent" />
    </LinearLayout>
</RelativeLayout>
